Add authentication (#7)
* Added 'webargs' integration
* Added 'auth' endpoints
* Add 'factory-boy' fixtures
