# billing/api/__main__.py
@@ -12,11 +12,23 @@ from billing.logs import configure_logs
     },
 )
 @click.option("--db-dsn")
+@click.option("--secret-key")
+@click.option("--session-cookie-name", default="sessionid")
 @click.option("--log-level", default="INFO")
 @click.option("--api-port", type=int, default=8080)
-def main(db_dsn: str, log_level: str, api_port: int) -> None:
+def main(
+        db_dsn: str,
+        secret_key: str,
+        session_cookie_name: str,
+        log_level: str,
+        api_port: int,
+) -> None:
     configure_logs(level=log_level)
-    app = init_app(db_dsn=db_dsn)
+    app = init_app(
+        db_dsn=db_dsn,
+        secret_key=secret_key,
+        session_cookie_name=session_cookie_name,
+    )
     web.run_app(app, port=api_port)
 
 
