# billing/api/v1.openapi.yml
@@ -31,6 +31,11 @@ paths:
                     $ref: "#/components/schemas/StatusSuccess"
                   data:
                     $ref: "#/components/schemas/User"
+          headers:
+            Set-Cookie:
+              schema:
+                type: string
+                example: sessionid="gAAAAABeleYOqtssLMNr26Oom2snWPe-8XepwdklnQGKpEkPpAxaojYeU3iH_1IOOpYT0R2Ig1-g0XNk0rKplZAbFSsZhS5Eg0GzoOcQnB6iGxdpwVna5Moor8_2r-GVgHwhdejQUlYqizPQJJdFStpgDv5bszG9holF23gXmQa-CyjMxquuUMc="; Path=/; HttpOnly
         '400':
           description: A JSON object of an error
           content:
@@ -46,8 +51,6 @@ paths:
   /v1/auth/logout:
     post:
       summary: Logs user out
-      security:
-        - ApiKeyAuth: []
       tags:
         - Authentication
       responses:
@@ -243,5 +246,5 @@ components:
   securitySchemes:
     ApiKeyAuth:
       type: apiKey
-      in: header
-      name: X-Api-Key
+      in: cookie
+      name: sessionid
